--- a/前提条件.md
+++ b/前提条件.md
@@ -48,16 +48,16 @@
 言い訳をすれば「言い訳するな」と突っぱねられて、黙るしかなかった
 優しいと感じた事がない　あったとしても思い出せない
 
-> 離婚の話が出た頃、母親に一人暮らしを願い出て実現したけれど
+離婚の話が出た頃、母親に一人暮らしを願い出て実現したけれど
 父は今でもその一人暮らしを「認めていない」と言う
 
->母には厳しく、弟には甘い。
+母には厳しく、弟には甘い。
 「私が反抗するから厳しい」と言っていたけど、支配の正当化にしか見えなかった
 
->ずっと怖い存在で、今でも「この人は本当に父親なのか」と思うことがある
+ずっと怖い存在で、今でも「この人は本当に父親なのか」と思うことがある
 育児に関わらず、突然“父親”の立場に戻ってきたような違和感
 
->今は怒りや嫌悪を通り越して無関心へ近づいている
+今は怒りや嫌悪を通り越して無関心へ近づいている
 怒られたり、トラブルが起きないようにする行動が増えた
 
 ---
@@ -83,18 +83,18 @@
 ---
 
 ## 今も残っているもの 
-> 説教は2時間以上が当たり前で、途中から内容を覚えられなくなる
-　「怒りの圧」がくると体が自動的にシャットダウンする感覚
+説教は2時間以上が当たり前で、途中から内容を覚えられなくなる
+「怒りの圧」がくると体が自動的にシャットダウンする感覚
 
-> 今でも“父親像”を見聞きすると、理想とのギャップを感じる
+今でも“父親像”を見聞きすると、理想とのギャップを感じる
 
 
 ---
 自由記述
 
->まず真っ先に出てくるのはやっぱり「嫌い」
->これ以上私の人生に関わらないで欲しいと思う
->自分の存在が私にとって嫌だと思う事にきっと気がついていない
+まず真っ先に出てくるのはやっぱり「嫌い」
+これ以上私の人生に関わらないで欲しいと思う
+自分の存在が私にとって嫌だと思う事にきっと気がついていない
 
 ---
 
@@ -109,14 +109,14 @@
 ---
 
 ## 私から見た姿
->  一緒にいると疲れることが多かった
+一緒にいると疲れることが多かった
 余計なことを言ってくる感じも多く、放っておいてほしかった
 
-> 弟が感情を爆発させると、母も一緒にヒステリックになっていて家がうるさかった
+弟が感情を爆発させると、母も一緒にヒステリックになっていて家がうるさかった
 
->特に印象に残っているのは、母の妹や祖父が来て話していたときに母が泣き出した場面
+特に印象に残っているのは、母の妹や祖父が来て話していたときに母が泣き出した場面
 
->母が入院して、弟の世話を押し付けられた時は、「自分だけ逃げてずるい」と思った
+母が入院して、弟の世話を押し付けられた時は、「自分だけ逃げてずるい」と思った
 
 
 ---
@@ -141,15 +141,15 @@
 ---
 
 ## 今も残っているもの 
-> 「母」という存在を思い出しても、温かいイメージよりも混乱や疲れの記憶が先にくる
->  “母として”よりも、“人として矛盾してる”と感じる部分が多い
+「母」という存在を思い出しても、温かいイメージよりも混乱や疲れの記憶が先にくる
+“母として”よりも、“人として矛盾してる”と感じる部分が多い
 
 ---
 自由記述
 
->顔も見たくないとか自分が言ってしまった事に対しては反省している
->だが、二度としないと言ったことも何度も繰り返す
->矛盾を感じる場面が多かった
+顔も見たくないとか自分が言ってしまった事に対しては反省している
+だが、二度としないと言ったことも何度も繰り返す
+矛盾を感じる場面が多かった
 
 
 ---
@@ -165,12 +165,12 @@
 ---
 
 ## 私から見た姿
->  弟が癇癪を起こすと、私は部屋にこもって関わらないようにしていた
+弟が癇癪を起こすと、私は部屋にこもって関わらないようにしていた
 それでも声が部屋まで響いてきて、うるさいと感じた
 
-> 行動ひとつひとつにイライラして、落ち着ける時間がなかった
+行動ひとつひとつにイライラして、落ち着ける時間がなかった
 
->母はなんとか宥めようとしていたけど、私は「うるさい」「静かにして」と強く押さえつけるしかできなかった
+母はなんとか宥めようとしていたけど、私は「うるさい」「静かにして」と強く押さえつけるしかできなかった
 父のように“力で黙らせる方法”しか知らなかったから
 
 >中学生になっても、まだ小学生のような感覚で止まっている
@@ -198,11 +198,11 @@
 ---
 
 ## 今も残っているもの 
-> 弟を思い出すと、今でもイライラが湧く
+弟を思い出すと、今でもイライラが湧く
 「結婚したい」「子どもが欲しい」と言う姿には呆れと不安しか感じない
 「お前、一人でどうやって生きてくの」とツッコミたくなる
 
-> 正直、存在そのものが“うざったい”
+正直、存在そのものが“うざったい”
 そして時々、あの頃の自分を思い出して思う
 「弟が欲しいなんて、星に願うんじゃなかった」
 
