--- a/前提条件.md
+++ b/前提条件.md
@@ -43,7 +43,7 @@
 ---
 
 ## 私から見た姿
->   常に警戒していた。
+常に警戒していた。
 怒鳴られた時は喉が詰まるような感覚になり、何も言えなくなる
 言い訳をすれば「言い訳するな」と突っぱねられて、黙るしかなかった
 優しいと感じた事がない　あったとしても思い出せない
