--- a/前提条件.md
+++ b/前提条件.md
@@ -28,8 +28,10 @@
 
 
 ---
+
 種類: 家族との関係 / 自分への影響 / 思考記録
 日付: 2025-10-13
+
 ---
 #父親
 ## 基本情報
@@ -173,7 +175,7 @@
 母はなんとか宥めようとしていたけど、私は「うるさい」「静かにして」と強く押さえつけるしかできなかった
 父のように“力で黙らせる方法”しか知らなかったから
 
->中学生になっても、まだ小学生のような感覚で止まっている
+中学生になっても、まだ小学生のような感覚で止まっている
 正直、もう関わりたくない
 
 
