--- a/承認欲求.md
+++ b/承認欲求.md
@@ -1,40 +1,77 @@
-承認欲求について
+## 承認欲求について
 
-1.どこから生まれたか
+### 1.どこから生まれたか
 
 ・愛情の条件化
+
 いい子でいなければ、怒られないようにしなければ愛されない条件付き
+
 怒られたり、否定されたりする事が存在資格の剥奪に見える
+
+
 ・支配的な父親と不安定な母親　認められるかどうかで世界が決まった
+
+
 ・父、母に理解されない、されても歪んで伝わる
 
 
-2.どう表に出るか
+### 2.どう表に出るか
+
 
 ・創作による証明
+
 形あるものにして残すことで痕跡を残す
+
 ・自分が努力しても褒められず、他人が評価されると
+
 じゃあ私はなんだったの　という欠落感
+
+
 ・私なんてと言う時も、内側では
+
+
 それでも誰かに見てほしいという衝動が同時に動いている
+
+
 ・誰かに見てほしい、認められたいという事は表になるべく出さない
+
+
 ・承認とは、死を回避する装置
+
 忘れられなければ、消えないはず
+
 第二の死＝記憶から消えることが怖い　もちろん死ぬのも怖い
 
-3.受け取った時の反応
+### 3.受け取った時の反応
 
 ・嬉しい
+
 肯定された瞬間は嬉しくなる
+
 でも自分のことなのに、内側まで届かない
+
+
 ・嬉しさを感じても身体的な実感は薄い
+
+
 ・誰が言ったかによって、承認の価値が変わる
+
 表面的な褒め言葉では動かない
+
 理解している人・専門的な人・尊敬できる人からの言葉が響く
+
+
 ・1人に認められても、それじゃ足りない
+
+
 ・時間が経って思い返しても、あんまり温かさは蘇らない
+
 承認の瞬間は“イベント”として記録されるけど、“感覚”としては残らない
+
+
 ・誰に言われるか、どんな文脈で言われるか　その深さを常に測ってる
+
+
 ・表面的な賞賛より、「ちゃんと見てくれた」「理解がある」言葉に価値を置く
 
 現在準備中…
