私の構成要素

--- a/私の構成要素.md
+++ b/私の構成要素.md
@@ -1,82 +1,130 @@
 ここでは私の構成要素について残す
 
-1.基本情報
+###1.基本情報
 
 名前：尾白ルイ
+
 性別：女
+
 年齢：現時点で18.学生
+
 特記事項:ASD(強いこだわり.感覚過敏).ADHD(混合型).双極性障害.解離傾向あり
 
 
-2.嗜好
+### 2.嗜好
 #好きなもの #好物 #苦手なもの
 
 食べ物系
+
 好きな食べ物：甘いもの、チョコ、揚げ物
+
 嫌いな食べ物：野菜と果物全般、野菜なら特にトマト(ケチャップは好き)
+
 好きな味の傾向：甘い、しょっぱい
+
 食感の好み：サクサク、カリカリ
 
 
-人物
+### 3.人物
+
 好きな人物像：自分を引っ張ってくれそうな人
+
 苦手な人物像：怒鳴る人、圧が強い人
 
-創作、芸術
-好きなジャンル：ダークファンタジー
-苦手なジャンル：恋愛物
-好きなゲームジャンル：RPG、ノベルゲーム、ローグライク、音ゲー、シミュレーション
-苦手なゲームジャンル：格闘、FPS
-詳しいものは別記事にて
 
-環境
+創作、芸術
+
+好きなジャンル：ダークファンタジー
+
+苦手なジャンル：恋愛物
+
+好きなゲームジャンル：RPG、ノベルゲーム、ローグライク、音ゲー、シミュレーション
+
+苦手なゲームジャンル：格闘、FPS
+
+
+### 4.環境
+
 好きな環境：静寂、夜、都市、海、水全般
+
 苦手な環境：人混み、騒音
+
 好きな季節：秋
+
 好きな天候：晴れ
+
 好きな時間帯：夕方〜深夜
 
 
-3.思考の癖
+### 5.思考の癖
 #思考の癖 #内面考察
 
 ・自分が納得できるかを優先する
+
 ・興味を持つ時も面白そうと思えたかが基準
+
 ・連想ゲームみたいに連鎖する考え方
+
 一つの話題から別の話題に唐突に切り替わる事がある
+
 その切り替えがきっかけで不安になることも
+
 ・不安になると思考が止まらなくなる
+
 ただしそこからの話題転換が上手くできずにさらにマイナスな事を考え出す事も
+
 ・誰かに理詰めされたり、怒られたり、相手の機嫌を損ねたのではないかと感じ取ると頭がフリーズする
+
 ・常に何かを考えている、風呂や歩いている時などの何もしていない時に拍車がかかる
+
 ・生きる理由は特に無いけど、創作で何か成せないと自分の人生ごと否定されるのではと思っている
+
 ・そのため、何もしていない時、何もできないときは、自分には価値がない、居てはいけないと自己嫌悪に陥りやすい
 
-4.ものの見え方
+### 6.ものの見え方
 #世界観
 
+
 ・全体としては無関心ごく少数の友達が居るだけ
+
 それ以外は敵か関係ない居ても居なくても変わらない存在
+
 ・"現実"に対して、吐き気に近い拒絶感がある
+
 ・他人とは、自分と違う存在　自分と似た要素を持つ人なら理解できる
+
 それ以外の他人は未知の生物みたい
+
 ・会話では建前を選びがち
+
 どうやれば相手を不快にさせないで済むのか、嫌われないで済むのかばかり考えている
+
 ・心を許せる条件は自分と似ている事
+
 過去、趣味などどこかに共通点があること
+
 ・理解されないと言う感覚は諦めに近い
+
 逆にまるで全てを理解したかのように語る方が苦手
+
 ・親密であるほど相手の感情に引っ張られる
 
 
-5.軸
+### 7.軸
 承認欲求
+
 準備中...
+
 死の恐怖
+
 準備中...
+
 自己否定
+
 準備中...
+
 このあたりに大きく分けることができると思う
+
 それぞれのページにて掘り下げ予定
 
 
