私の構成要素

--- a/私の構成要素.md
+++ b/私の構成要素.md
@@ -111,7 +111,7 @@
 
 
 ### 7.軸
-[承認欲求]()
+[承認欲求](https://github.com/otyappaaaaaaa/OziroRui_opensourceproject/blob/main/%E6%89%BF%E8%AA%8D%E6%AC%B2%E6%B1%82.md)
 
 
 死の恐怖
