--- a/承認欲求.md
+++ b/承認欲求.md
@@ -74,7 +74,18 @@
 
 ・表面的な賞賛より、「ちゃんと見てくれた」「理解がある」言葉に価値を置く
 
-現在準備中…
+### 4.承認されなかった時
+
+なんで？私は？
+
+と置いていかれたような気分になる
+
+その後、私もできるはずなのに、どうして私じゃないの？
+
+と思う、悔しいけどそれを人にぶつけても自分にぶつけてもダメ
+
+だからやり場のない気持ちが渦巻く
+
 
 
 
