--- a/承認欲求.md
+++ b/承認欲求.md
@@ -76,7 +76,7 @@
 
 ### 4.承認されなかった時
 
-なんで？私は？
+・なんで？私は？
 
 と置いていかれたような気分になる
 
@@ -85,6 +85,31 @@
 と思う、悔しいけどそれを人にぶつけても自分にぶつけてもダメ
 
 だからやり場のない気持ちが渦巻く
+
+
+
+・自分以外の誰かが評価されていると
+
+強く反応する
+
+特に近い存在（友人や同ジャンル）
+
+同じ事私もできるはずなのにどうして評価されないのと感じる
+
+
+その焦りや嫉妬は外に向かずに
+
+私はダメだ、居なくても良い
+
+の裏打ちになってしまい自己否定に繋がる
+
+
+・調子が悪い時は、誰かがちゃんと見てくれていても
+
+自分は誰にも見てもらえない、誰にも愛されないって感覚が勝つ
+
+理屈では分かっていてもそっちに傾く
+
 
 
 
