--- a/更新ログ.md
+++ b/更新ログ.md
@@ -1,19 +1,20 @@
+#### [2025-10-20]
+- 死の恐怖　を作成
 
-
-## [2025-10-16]
+#### [2025-10-16]
 - 承認欲求　を作成
 - 雑記　を作成
 - 尾黒、灰について　を作成
 
-## [2025-10-15]
+#### [2025-10-15]
 - 私の構成要素　が完成
 
-## [2025-10-14]
+#### [2025-10-14]
 - 使用タグ一覧　検索用　を作成
 
-## [2025-10-13]
+#### [2025-10-13]
 - 前提条件　を作成
 
-## [2025-10-12]
+#### [2025-10-12]
 - このリポジトリを立ち上げた
 -　方針について　を作成
