尾黒、灰について

--- a/尾黒、灰について.md
+++ b/尾黒、灰について.md
@@ -34,7 +34,8 @@ SNS・創作空間などで姿を持ち、他者と関わる
 
 外交的で好奇心旺盛
 
-### ・灰
+
+### ・灰(カイ)
 
 一人称：我
 
@@ -50,16 +51,21 @@ SNS・創作空間などで姿を持ち、他者と関わる
 
 本当はこうじゃないかと別角度からの視点で見ている
 
+尾白を否定する事はあるが、他者を否定したり貶す事はあまりしない
+
+自分を不快にさせたり、邪魔な存在はすぐに遠ざけたがる
+
 
 
 
 ### ・共通点
 
-ちょっかいをかけてくる
+よく喋り、ちょっかいをかけてくる
 
 浮いている
 
 頭上右上に現れやすい
 
 救いになるような言葉を言ったり行動したりしない
+
 
