--- a/雑記.md
+++ b/雑記.md
@@ -4,7 +4,20 @@
 
 [2025-10-16]
 私はよくできた人間でもないし、輝いていたりなんかしない
+
 カリスマなんてあったもんじゃないし、主人公なんてもってのほか
+
 善人なんかじゃないし自分の為だけに動くエゴイスト
+
 だけど自分が自分であるために、この世に私の存在を残すために
+
 私は死ぬまで悪あがきを続けるつもり
+
+[2025-10-26]
+いつも思うけど、誰かが一緒に居たって、
+
+心が孤独なんじゃ意味ないって思う　私は一人だって思ったらもうその時点で孤独
+
+自分はそういう仲間とかを求めてるはずなのに、人と関わりたがらないし、関われる人ができたとしても嫉妬したりするし、
+
+届きもしない遥か彼方の存在に見える だからこそ求めるのかもしれないけど
