--- a/死の恐怖.md
+++ b/死の恐怖.md
@@ -129,6 +129,25 @@
 
 キャラもまた、それを得られない
 
+### 7.生への執着
+
+キャラクターみたいに誰かのためにその命を捧げるなんて考えられないとは思う
+
+人の為なんて高潔さは持ち合わせていないし、自分が生きる為なら多分人を見捨てられる
+
+持っていないからそう思うのか、思っているからそうならなかったのかは分からない
+
+多分どっちも合っててどっちも違う気がするけど
+
+死ぬのが怖いから生きてる　
+
+ただそれだけ 生きてる事が辛くて苦しいし、それが死ぬ恐怖をかき消して消えたいと思う事もあるけど 
+
+いざ本当に死ぬんだろうと思うとやっぱ怖いから結局生きてる
+
+多分根っこはずっと生きていたいと思ってる
+
+生きたいけど、現実がどうしようもなく辛いし逃げられないから選択肢として死ぬが出てきちゃうだけな気がする
 
 
 
