--- a/雑記.md
+++ b/雑記.md
@@ -3,6 +3,28 @@
 思いついた時に更新します
 
 ----
+
+[2025-11-10]
+
+かわいそうって言葉は私にとって最大級の見下しと軽蔑
+
+だから自分にも使うことは無い 
+
+だけど、なんとなく自分は愚かでかわいそうな人間のまま死ぬ　って思考がある
+
+人間より更に上のいわゆる化物とかって枠組みに憧れる 
+
+そうだったらわざわざ人間関係やら他人との比較で苦しまなくて良くなりそうだって
+
+人間という社会の枠組みから逃げ出せると思ってる
+
+発達障害とか精神的な病とかもひっくるめて自分だと思って受け入れてるけど、結局自分ってそれで良い　
+
+変わらなくていいってだけ、　克服しようという気が無いし不幸で良いむしろそれが私ってなってる 
+
+自分から不幸で居ることを選び取ってる感じは多少ある
+
+----
 [2025-10-16]
 私はよくできた人間でもないし、輝いていたりなんかしない
 
