--- a/雑記.md
+++ b/雑記.md
@@ -2,6 +2,27 @@
 思った事を特に分けることもなく書き記すコーナー
 思いついた時に更新します
 
+[2025-11-11]
+
+多分私は短期的報酬＞長期的報酬になってると思う
+
+貯金できない：欲しい物を即買う方が楽しい
+
+ダイエットが続かない：目の前の美味しいものの方が魅力的に見えてしまう
+
+イラスト練習：そもそも練習が楽しくないからやりたくない
+
+3D作業が後回しになる：モデリングからセットアップまでが完成で、それ以降は中々乗らない
+
+
+それこそ昨日からイラストの練習を始めたけど、すでに楽しくなくて投げ出しそう
+
+自分の中の想像しているものがはっきりしていて、それを出力している過程が楽しいから
+
+練習は後になって実を結ぶから全然向いてない
+
+けど自分の思う通りに出力できずに自分の作ったものを認められないままなのは嫌だし悔しい
+
 ----
 
 [2025-11-10]
